# tea-tree

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/ttree/: __init__.py  cli.py
tests/: test_cli.py  test_symlinks.py
