[project]
name = "tea-tree"
version = "0.1.1"
description = "A Rich + Typer powered tree viewer that summarizes directories when they get busy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
ttree = "ttree.cli:app"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ttree"
module-root = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
